--- a/css/style.css
+++ b/css/style.css
@@ -1881,6 +1881,10 @@ text-transform: uppercase;
           color: #fff;
           }
 
+          .subheader{
+            margin-left:70px;
+          }
+
 .our-team .team-row {
 margin-left: -40px;
 margin-right: -40px;
@@ -5186,7 +5190,7 @@ font-size: 0.9rem;
 margin: 1rem 0 0.6rem;
 }
 
-.service img {/* left: 35%; *//* position: absolute; *//* padding-right: 0px; *//* padding-left: 0px; */top: 96px;background-color: white;width: 35%;/* padding-top: 30px; */border-radius: 50%;padding: 5px;}
+.service img {/* left: 35%; */display: contents;/* position: absolute; *//* padding-right: 0px; *//* padding-left: 0px; */top: 96px;background-color: white;width: 35%;/* padding-top: 30px; */border-radius: 50%;padding: 5px;}
 .kenburns-top img{
 width: auto;
 height: 450px;
@@ -5573,7 +5577,7 @@ font-size: 0.9rem;
 margin: 1rem 0 0.6rem;
 }
 
-.service img {/* left: 26%; *//* position: absolute; *//* padding-right: 0px; *//* padding-left: 0px; */top: 96px;background-color: white;width: 50%;/* padding-top: 30px; */border-radius: 50%;padding: 5px;}
+.service img {/* left: 26%; *//* position: absolute; *//* padding-right: 0px; *//* padding-left: 0px; */display: contents;top: 96px;background-color: white;width: 50%;/* padding-top: 30px; */border-radius: 50%;padding: 5px;}
 .kenburns-top img{
 width: auto;
 height: 450px;
@@ -5790,9 +5794,8 @@ padding-right: 8px;
 }
 
 .principal-team img {
-  width: 57%;
+  width: 25%;
   margin-left: 56px;
-
 }
 
 .contact-form-wrapper{
@@ -5818,15 +5821,7 @@ position: absolute;
 left: 0px;
 right: 0px;
 }
-.header-quienesomos p {
-padding-top: 174px;
-/* text-transform: uppercase; */
-text-align: center;
-text-decoration: none;
-font-size: 3em;
-font-weight: 600;
-color: #fff;
-}
+.header-quienesomos p {padding-top: 174px;/* text-transform: uppercase; */text-align: center;text-decoration: none;font-size: 2em;font-weight: 600;color: #fff;}
 .header-quienesomos {
 height: 350px;
 width: 94%;
@@ -5840,6 +5835,156 @@ overflow: hidden;
 width: 100%;
 margin: 0 auto 0px;
 }
+.header-provincial{
+  height: 450px;
+  width: 94%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.507)), to(rgba(0, 0, 0, 0.507))), url("../images/provincial.jpg");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.507)), url("../images/provincial.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  margin: 0px auto 0px;
+  text-align: center;
+  }
+  
+  .header-provincial p{
+  padding-top: 200px;
+  /* text-transform: uppercase; */
+  text-align: center;
+  text-decoration: none;
+  font-size: 2.875em;
+  font-weight: 600;
+  color: #fff;
+  }
+
+  .header-nacional{
+    height: 450px;
+    width: 94%;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.507)), to(rgba(0, 0, 0, 0.507))), url("../images/nacional.jpg");
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.507)), url("../images/nacional.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    margin: 0px auto 0px;
+    text-align: center;
+    }
+    
+    .header-nacional p{
+    padding-top: 200px;
+    /* text-transform: uppercase; */
+    text-align: center;
+    text-decoration: none;
+    font-size: 2.875em;
+    font-weight: 600;
+    color: #fff;
+    }
+    .header-registro{
+      height: 450px;
+      width: 94%;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.507)), to(rgba(0, 0, 0, 0.507))), url("../images/registro1.jpg");
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.507)), url("../images/registro1.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: bottom center;
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      margin: 0px auto 0px;
+      text-align: center;
+      }
+      
+      .header-registro p{
+      padding-top: 200px;
+      /* text-transform: uppercase; */
+      text-align: center;
+      text-decoration: none;
+      font-size: 2.875em;
+      font-weight: 600;
+      color: #fff;
+      }
+
+    .header-auditoria{
+      height: 450px;
+      width: 94%;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.507)), to(rgba(0, 0, 0, 0.507))), url("../images/auditorias.jpg");
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.507)), url("../images/auditorias.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      margin: 0px auto 0px;
+      text-align: center;
+      }
+      
+      .header-auditoria p{
+      padding-top: 200px;
+      /* text-transform: uppercase; */
+      text-align: center;
+      text-decoration: none;
+      font-size: 2.875em;
+      font-weight: 600;
+      color: #fff;
+      }
+      .header-mapeo{
+        height: 450px;
+        width: 94%;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.507)), to(rgba(0, 0, 0, 0.507))), url("../images/termica.jpg");
+        background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.507)), url("../images/termica.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top center;
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        margin: 0px auto 0px;
+        text-align: center;
+        }
+        
+        .header-mapeo p{
+        padding-top: 200px;
+        /* text-transform: uppercase; */
+        text-align: center;
+        text-decoration: none;
+        font-size: 2.875em;
+        font-weight: 600;
+        color: #fff;
+        }
+
+        .header-validacion{
+          height: 450px;
+          width: 94%;
+          background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.507)), to(rgba(0, 0, 0, 0.507))), url("../images/validar.jpg");
+          background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.507)), url("../images/validar.jpg");
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: bottom;
+          position: relative;
+          overflow: hidden;
+          width: 100%;
+          margin: 0px auto 0px;
+          text-align: center;
+          }
+          
+          .header-validacion p{
+          padding-top: 200px;
+          /* text-transform: uppercase; */
+          text-align: center;
+          text-decoration: none;
+          font-size: 2.875em;
+          font-weight: 600;
+          color: #fff;
+          }
+          .subheader{
+            margin-left: 0px;
+          }
 .fondo-color-texto-qs {height: 700px;padding: 0px 27px 0px 0px;background-color: white;opacity: 0.9;}
 .imagen-qs-fondo {
 height: 700px;
